# mag_tester2

./: CMakeLists.txt  README.md  chart.py  draw_contour.py  main.cpp
Hist/: CMakeLists.txt  chart.py  foundPeaks.txt  main.cpp  out.csv  out2.csv  output1.txt  wykres.odf.ods
Hough/: CMakeLists.txt  hough.cpp
test_framework/: test_hist.py  test_hist.sh  test_hough.py  test_hough.sh
